05/07/2004  version 0.1.71  Ian Lewis <IanLewis@member.fsf.org>

    * Added a layer between the AdapterNode and the GUI. The DefaultViewTreeNode
      class contains properties for use with the GUI. AdapterNode now doesn't
      any GUI specific code in it.

04/23/2004  version 0.1.70  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed some syncing problems with the XMLDocument and client classes
      when the serialization process changes the structure of the document
      by splitting cdata-section nodes.
    * Fixed a bug that caused IndexOutOfBoundsExceptions to be thrown when
      writing a document over 5120 bytes.
    * Fixed a bug in the serializer that caused the root element opening tag
      to be placed directly after a document type definition.
    * updated how the DOMSerializer uses Writers. It uses them in a better way
      now.

04/23/2004  version 0.1.69  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a bug that was causing comment nodes to indented too far
      when formatting the document during serialization.
    * Reworked the updatedMenuBar() method in the TabbedView so that
      it doesn't create the whole menubar from scratch each time it's
      updated.
    * Fixed a bug in serialization that caused only the public id and not
      the system id to be seraliazed if both existed in a doctype node.

04/22/2004  version 0.1.68  Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a build problem that was introduced into cvs.
    * Fixed bug where jsxe generated NumberFormatExceptions if user defined
      saved properties were incorrectly formatted.
    * When a document is opened the document root element is now expanded
      by default.
    * When dragging and dropping and/or adding nodes the nodes that whose
      locations have changed are always visible after the change.
    * Added a Close All action to the file menu so that users can close all of
      the open xml documents at once.